Implement Trip List and Detail View
- Created `TripListAdapter` to display trip information in a list.
- Created `TripListActivity` to show a list of trips and navigate to trip details.
- Created `TripDetailActivity` to display detailed information for a selected trip.
- Added new layouts: `activity_trip_list.xml`, `activity_trip_detail.xml`, `trip_list_item.xml`.
- Added strings for trip list and detail activities.
- Implemented `getAllTripInfo` method in `TripInfoDao`.
- Updated `MainActivity` to navigate to `TripListActivity`.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:label="@string/activity2"/>
         <activity android:name=".ThirdActivity"
             android:label="@string/activity3"/>
+        <activity android:name=".TripListActivity"
+            android:label="@string/trip_list_activity"/>
+        <activity android:name=".TripDetailActivity"
+            android:label="@string/trip_details_activity"/>
 
     </application>
 
