Refactor UI and navigation: - Update the title of trip list. - Remove viewTripsButton and adjust the layout of save and back buttons in the new trip creation page. - Remove goTo2Button, and modify goTo3Button's text to "Trip List" in the main page. - Move back button and save button to the bottom of the new trip creation page.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,6 @@
             android:theme="@style/Theme.Assignment1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -30,9 +29,20 @@
         <activity android:name=".ThirdActivity"
             android:label="@string/activity3"/>
         <activity android:name=".TripListActivity"
-            android:label="@string/trip_list_activity"/>
+            android:label="@string/trip_list_activity"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+
         <activity android:name=".TripDetailActivity"
-            android:label="@string/trip_details_activity"/>
+            android:label="@string/trip_details_activity"
+            android:parentActivityName=".TripListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".TripListActivity" />
+        </activity>
 
     </application>
 
